[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameScenes/CreditsButtons.gd" type="Script" id=2]
[ext_resource path="res://GameScenes/Level.cs" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 1 )

[node name="Level1-Credits" type="Node2D"]
script = ExtResource( 3 )
soundtrack = 1

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 100.0
margin_right = -32.0
margin_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 1838.0
margin_bottom = 940.0

[node name="Output" type="RichTextLabel" parent="Control/MarginContainer/Login"]
visible = false
margin_right = 1838.0

[node name="Title" type="Label" parent="Control/MarginContainer/Login"]
margin_right = 1838.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "The End!"
align = 1

[node name="Title2" type="Label" parent="Control/MarginContainer/Login"]
margin_top = 113.0
margin_right = 1838.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
text = "Credits:"
align = 1

[node name="Button1" type="Button" parent="Control/MarginContainer/Login"]
margin_top = 226.0
margin_right = 1838.0
margin_bottom = 341.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Bird sprites - ma9ici4n"
script = ExtResource( 2 )

[node name="Button2" type="Button" parent="Control/MarginContainer/Login"]
margin_top = 345.0
margin_right = 1838.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Sword sprite - kspriter95"

[node name="Button3" type="Button" parent="Control/MarginContainer/Login"]
margin_top = 464.0
margin_right = 1838.0
margin_bottom = 579.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Title theme music - Lena Raine"

[node name="Button4" type="Button" parent="Control/MarginContainer/Login"]
margin_top = 583.0
margin_right = 1838.0
margin_bottom = 698.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "SFX and audio design - A Shell In A Pit"

[connection signal="pressed" from="Control/MarginContainer/Login/Button1" to="Control/MarginContainer/Login/Button1" method="_on_Button1_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Login/Button2" to="Control/MarginContainer/Login/Button1" method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Login/Button3" to="Control/MarginContainer/Login/Button1" method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Login/Button4" to="Control/MarginContainer/Login/Button1" method="_on_Button4_pressed"]
